examples/ui-harness/tests/ui/tokio_spawn_requires_send.stderr
error: future cannot be sent between threads safely
  --> tests/ui/tokio_spawn_requires_send.rs:8:5
   |
 8 | /     tokio::spawn(async move {
 9 | |         println!("{state}");
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/ui/tokio_spawn_requires_send.rs:8:18: 8:28}`, the trait `Send` is not implemented for `Rc<String>`
note: captured value is not `Send`
  --> tests/ui/tokio_spawn_requires_send.rs:9:20
   |
 9 |         println!("{state}");
   |                    ^^^^^ has type `Rc<String>` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`
